fix email icon alignment

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -290,10 +290,11 @@ body {
   background: none;
   border: none;
   padding: 0;
-  margin: 0;
-  display: flex;
+  margin: 10px 10px;
+  display: inline-flex;
   align-items: center;
   justify-content: center;
+  position: relative;
 }
 
 @keyframes pulse {
